// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should render default correctly 1`] = `
<div class="fx-search">
  <form class="fx-search_inner">
    <fx-input-stub class="fx-search_field"></fx-input-stub><button class="fx-search_button">Search</button>
    <!--v-if-->
  </form>
  <!--v-if-->
</div>
`;

exports[`SearchBar should render prop ghost=true slots correctly 1`] = `
<div class="fx-search">
  <form class="fx-search_inner has--cancel">
    <fx-input-stub class="fx-search_field ghost"></fx-input-stub><button class="fx-search_button">Search</button>
    <fx-button-stub class="fx-search_cancel-button"></fx-button-stub>
  </form>
  <!--v-if-->
</div>
`;

exports[`SearchBar should render prop set placeholders correctly 1`] = `
<div class="fx-search">
  <form class="fx-search_inner">
    <fx-input-stub class="fx-search_field"></fx-input-stub><button class="fx-search_button">Search</button>
    <!--v-if-->
  </form>
  <!--v-if-->
</div>
`;

exports[`SearchBar should render prop showCancel=true correctly 1`] = `
<div class="fx-search">
  <form class="fx-search_inner has--cancel">
    <fx-input-stub class="fx-search_field"></fx-input-stub><button class="fx-search_button">Search</button>
    <fx-button-stub class="fx-search_cancel-button"></fx-button-stub>
  </form>
  <!--v-if-->
</div>
`;
